[gd_scene load_steps=17 format=2]

[ext_resource path="res://spriteframes/MainCharacter_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/misc/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/sword.png" type="Texture" id=3]
[ext_resource path="res://assets/misc/frozen_block.png" type="Texture" id=4]
[ext_resource path="res://scenes/particles/FireBurstParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/player/gliding_wings.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/chargebar_charging.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/healthbar_empty.png" type="Texture" id=8]
[ext_resource path="res://scenes/particles/ChargingParticle.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 37.6338
height = 17.3718

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.1168, 39.1389 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24.266, 9.22076 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "SwordSwingLeft"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, -125.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24.266, 9.22076 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "SwordSwingLower"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -125.0, -225.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "SwordSwingRight"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 50.0, 125.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 17, 5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "SwordSwingUpper"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.43051e-06, -22.6691 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ChargingParticle" parent="." instance=ExtResource( 9 )]

[node name="FreezeMask" type="Sprite" parent="."]
visible = false
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="GliderWings" type="Sprite" parent="."]
visible = false
scale = Vector2( 5, 6 )
texture = ExtResource( 6 )

[node name="SwordSprite" type="Sprite" parent="."]
position = Vector2( -24.266, 9.22076 )
rotation = 0.872665
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )
flip_h = true

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = ExtResource( 1 )
animation = "Frozen"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.05854 )
shape = SubResource( 1 )

[node name="AttackCollision" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 70.2806, 5.05854 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 5.05854 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 100, 0 )

[node name="DashParticlePosition" type="Position2D" parent="."]
position = Vector2( -49.2104, 0 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="KnockbackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="KnockbackCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealingTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="FullHealTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.5
one_shot = true

[node name="ManaHealTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="DashUseTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="GlideTimer" type="Timer" parent="."]

[node name="LeftDetector" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftDetector"]
polygon = PoolVector2Array( -13.0297, -39.1703, -31.0406, -25.6622, -37.9271, -3.14862, -37.6622, 18.0406, -30.246, 35.2569, -14.8838, 47.1758, -1.11079, 51.4137, -0.316193, -41.0244 )

[node name="RightDectector" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="RightDectector"]
position = Vector2( 0, 9.53517 )
rotation = 3.14159
polygon = PoolVector2Array( -13.0297, -39.1703, -31.0406, -25.6622, -37.9271, -3.14862, -37.6622, 18.0406, -30.246, 35.2569, -14.8838, 47.1758, -1.11079, 51.4137, -0.316193, -41.0244 )

[node name="ToggleArea" type="Area2D" parent="." groups=["PlayerToggle"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToggleArea"]
position = Vector2( 0, 5.05854 )
shape = SubResource( 1 )
disabled = true

[node name="ParticlePosition" type="Position2D" parent="."]
position = Vector2( 0, 50 )

[node name="GroundPoundPositionRight" type="Position2D" parent="."]
position = Vector2( 40, 50 )

[node name="GroundPoundPositionLeft" type="Position2D" parent="."]
position = Vector2( -40, 50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/SwordSwingLeft = SubResource( 5 )
anims/SwordSwingLower = SubResource( 7 )
anims/SwordSwingRight = SubResource( 3 )
anims/SwordSwingUpper = SubResource( 6 )

[node name="FireBurstPosition" type="Position2D" parent="."]
position = Vector2( 48, 0 )
scale = Vector2( 127.023, 0.426896 )

[node name="FireBurstArea" type="Area2D" parent="." groups=["Fireball"]]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FireBurstArea"]
polygon = PoolVector2Array( 48.2045, -7.99997, 400.54, -110.589, 398.858, 108.044, 46.5227, 9.65884 )
disabled = true

[node name="FireBurstParticle" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 48, 0 )

[node name="FireBurstTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SwordSpreadArea" type="Area2D" parent="." groups=["Sword2"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwordSpreadArea"]
polygon = PoolVector2Array( -4.49139, 2.44882, -70.4112, -26.2582, -183.113, -74.1032, -185.239, 49.2306, 175.193, 47.1042, 174.13, -74.1032 )
disabled = true

[node name="ChargeBar" type="TextureProgress" parent="."]
margin_left = -49.2104
margin_top = -83.4949
margin_right = -29.2104
margin_bottom = -77.4949
rect_scale = Vector2( 5, 5 )
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="KnockbackCooldownTimer" to="." method="_on_KnockbackCooldownTimer_timeout"]
[connection signal="timeout" from="HealingTimer" to="." method="_on_HealingTimer_timeout"]
[connection signal="timeout" from="FullHealTimer" to="." method="_on_FullHealTimer_timeout"]
[connection signal="timeout" from="ManaHealTimer" to="." method="_on_ManaHealTimer_timeout"]
[connection signal="timeout" from="DashUseTimer" to="." method="_on_DashUseTimer_timeout"]
[connection signal="timeout" from="GlideTimer" to="." method="_on_GlideTimer_timeout"]
[connection signal="area_entered" from="LeftDetector" to="." method="_on_LeftDetector_area_entered"]
[connection signal="area_entered" from="RightDectector" to="." method="_on_RightDectector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
